--- a/RASIC-Halotech-Import-Actualizado.html
+++ b/RASIC-Halotech-Import-Actualizado.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>App RASIC Halotech - Responsiva</title>
+<!-- Iconos para diferentes dispositivos -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+  
+  <!-- Metadatos para móviles -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="RASIC Halotech">
   <!-- Tailwind CSS para estilos -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- SheetJS para manejo de Excel -->
